--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
   <meta property="og:url" content="https://jibinquan.github.io/">
   <meta property="og:site_name" content="青萍之末">
   <meta property="og:title" content="欢迎访问">
-  <meta property="og:description" content="莫听穿林打叶声，何妨吟啸且徐行。">
+  <meta property="og:description" content="书写文字，不只在于交流表达，也是为了抵抗遗忘。">
   <meta property="og:locale" content="zh_cn">
   <meta property="og:type" content="website">
 
   
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="欢迎访问">
-  <meta name="twitter:description" content="莫听穿林打叶声，何妨吟啸且徐行。">
+  <meta name="twitter:description" content="书写文字，不只在于交流表达，也是为了抵抗遗忘。">
 
   
   <script type="application/ld+json">
@@ -695,8 +695,9 @@
       }).go();
     });
 </script>
-<p>莫听穿林打叶声，何妨吟啸且徐行。</p>
-<p>竹杖芒鞋轻胜马，谁怕？一蓑烟雨任平生。</p>
+<p>书写文字，不只在于交流表达，也是为了抵抗遗忘。</p>
+<p>内容仅为个人观点，欢迎评论交流。</p>
+<p>如有疏漏错误之处，恳请批评指正。</p>
 </section>
                 </div>
             </div>
